# zed-i18n

./: .git-blame-ignore-revs  CONTRIBUTING.md  Cargo.toml  README.md  README_CN.md  default.nix  shell.nix
.cargo/: ci-config.toml  config.toml
.config/: hakari.toml
.github/: actionlint.yml
.github/ISSUE_TEMPLATE/: 99_other.yml  config.yml
.github/workflows/: ci.yml  danger.yml  unit_evals.yml
assets/settings/: default.json
assets/themes/: LICENSES
crates/audio/: Cargo.toml
crates/collab/: Cargo.toml
crates/denoise/: Cargo.toml  README.md
crates/editor/: Cargo.toml
crates/extension_api/: Cargo.toml  README.md
crates/gpui/: Cargo.toml  README.md
crates/html_to_markdown/: Cargo.toml
crates/livekit_client/: Cargo.toml
crates/localization/: Cargo.toml  README.md
crates/performance_monitor/: Cargo.toml
crates/performance_monitor/src/: lib.rs
crates/vim/: Cargo.toml
crates/zed/: Cargo.toml
docs/src/: configuring-zed.md  debugger.md  development.md  globs.md  helix.md  key-bindings.md  languages.md  linux.md  remote-development.md  repl.md  snippets.md  system-requirements.md  telemetry.md  themes.md  vim.md  windows.md  workspace-persistence.md
docs/theme/: highlight.css
extensions/: EXTRACTION.md  README.md
extensions/glsl/: extension.toml
legal/: terms.md  third-party-terms.md
nix/: build.nix
script/: bundle-linux  bundle-mac  bundle-windows.ps1  draft-release-notes  get-preview-channel-changes  get-pull-requests-since  get-stable-channel-release-notes  install-cmake  install-mold  squawk  trigger-release  update-json-schemas
(+227 files in other folders)
