[package]
name = "performance_monitor"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
gpui.workspace = true
human_bytes.workspace = true
log.workspace = true
sysinfo.workspace = true
ui.workspace = true
workspace.workspace = true
workspace-hack.workspace = true
